# stats-redo

./: README.md  pyproject.toml
Practice Exercises/: Ex1_Garden of Forks.ipynb  Ex2_Geocentric Models.ipynb  Garden of Forks.ipynb
