[project]
name = "stats-redo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Caleb Mah", email = "calebmahweekeat@gmail.com"},
]
dependencies = [
    "pandas>=2.3.3",
    "kagglehub>=0.3.12",
    "pymc>=5.25.1",
    "ipykernel>=6.30.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
